--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@braid/vue-formulate": "^2.5.3",
+    "@nuxt-hero-icons/outline": "^1.0.1",
+    "@nuxt-hero-icons/solid": "^1.0.1",
     "@nuxtjs/auth-next": "5.0.0-1643791578.532b3d6",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/svg": "^0.4.0",
@@ -16,6 +19,9 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
+    "@vue-hero-icons/outline": "^1.7.2",
+    "@vue-hero-icons/solid": "^1.7.2",
+    "@vue/composition-api": "^1.4.9",
     "apexcharts": "^3.33.1",
     "core-js": "^3.19.3",
     "gsap": "^3.9.1",
@@ -26,12 +32,16 @@
     "vue-final-modal": "^2.4.1",
     "vue-form-generator": "^2.3.4",
     "vue-good-table": "^2.21.11",
+    "vue-multiselect": "^2.1.6",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxt/image": "^0.6.2",
     "@nuxtjs/tailwindcss": "^4.2.1",
-    "postcss": "^8.4.4"
+    "postcss": "^8.4.4",
+    "sass": "^1.49.9",
+    "sass-loader": "^10.2.1"
   }
 }
