--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@nuxt-hero-icons/solid": "^1.0.1",
     "@nuxtjs/auth-next": "5.0.0-1643791578.532b3d6",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/sentry": "^5.1.7",
     "@nuxtjs/svg": "^0.4.0",
+    "@sentry/tracing": "^6.19.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.1",
@@ -40,6 +42,7 @@
     "@babel/eslint-parser": "^7.17.0",
     "@nuxt/image": "^0.6.2",
     "@nuxtjs/eslint-config": "^9.0.0",
+    "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "eslint": "^8.12.0",
     "postcss": "^8.4.4",
