--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -31,4 +31,4 @@ jobs:
       - name: Push Docker images
         run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/sgt-production-frontend:${{ steps.vars.outputs.sha_short }}
-          export DOCKER_CONFIG=$(cat ~/.docker/config.json | base64 -w 0)
+#          export DOCKER_CONFIG=$(cat ~/.docker/config.json | base64 -w 0)
