--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gsap": "^3.9.1",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
+    "qrcode.vue": "^1.7.0",
     "vue": "^2.6.14",
     "vue-final-modal": "^2.4.1",
     "vue-form-generator": "^2.3.4",
