--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/svg": "^0.4.0",
     "@sentry/tracing": "^6.19.6",
+    "@stripe/stripe-js": "^1.29.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.1",
@@ -35,6 +36,7 @@
     "nuxt-feature-toggle": "^1.2.2",
     "nuxt-flatpickr": "^0.0.2",
     "qrcode.vue": "^1.7.0",
+    "stripe": "^9.4.0",
     "vue": "^2.6.14",
     "vue-chartjs": "^3.4.0",
     "vue-final-modal": "^2.4.1",
